--- a/style.css
+++ b/style.css
@@ -8,8 +8,9 @@
 body{
     overflow-x: hidden;
 }
-body::-webkit-scrollbar {
-    display: none;
+::-webkit-scrollbar {
+    width: 0;
+    background: transparent;
 }
 
 .home {
@@ -17,7 +18,6 @@ body::-webkit-scrollbar {
     display: flex;
     justify-content: center;
     align-items: center;
-    animation: fadeTop 1s;
 }
 
 @keyframes fadeTop {
@@ -30,7 +30,6 @@ body::-webkit-scrollbar {
         transform: translateY(0);
     }
 }
-
 @keyframes fadeLeft {
     0% {
         opacity: 0;
@@ -71,10 +70,26 @@ h1 {
     color: #252525;
     font-weight: 200;
     margin-bottom: 250px;
+    animation: fadeTop 1s;
 }
 
 h1 span {
-    color: #535353;
+    color: #575ebe;
+    font-weight: 600;
+}
+
+.main-h2 {
+    font-size: 50px;
+    text-align: center;
+    position: absolute;
+    top: 200px;
+    color: #252525;
+    font-weight: 200;
+    margin-bottom: 250px;
+    animation: fadeBottom 1s;
+}
+.main-h2 span {
+    color: #575ebe;
     font-weight: 600;
 }
 
@@ -112,9 +127,11 @@ h1 span {
 
 .nav-toggler.active .l1{
     transform: translateY(0) rotate(45deg);
+    background: black;
 }
 .nav-toggler.active .l3{
     transform: translateY(0) rotate(-45deg);
+    background: black;
 }
 .nav-toggler.active .l2{
     opacity: 0;
@@ -128,7 +145,7 @@ nav {
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    background-color: rgb(255, 255, 255);
+    background-color: whitesmoke;
     border-bottom: 1px solid rgb(207, 207, 207);
     transform: translateY(-100%);
     transition: transform 0.3s cubic-bezier(0.73, 0.11, 0.67, 0.84);
@@ -136,16 +153,32 @@ nav {
 
 nav.active {
     transform: translate(0);
+    z-index: 1;
+    background-color: whitesmoke;
 }
 nav a {
     position: relative;
     font-family: 'Poppins';
     text-decoration: none;
-    color: black;
-    font-size: 20px;
+    color: #0e0d0d;
+    font-size: 24px;
     display: block;
-    margin: 10px 0;
-    padding: 10px;
+    margin: 10px 0 0 50px;
+}
+
+nav a:hover::after{
+    transform: scale(1);
+}
+
+nav a::after{
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background: rgb(8, 8, 8);
+    transform: scale(0);
+    transition: transform 0.2s ease-in-out;
 }
 
 .alwaysHere{
@@ -159,58 +192,56 @@ nav a {
 }
 
 footer .footer-box {
-    background-color: #f0f0f0;
+    background-color: #181818;
     width: 100%;
     height: 150px;
+    position: absolute;
 }
 
 .kozomail {
     text-decoration: underline;
-    color: black;
+    color: rgb(255, 255, 255);
 }
+
+.kozomail:hover{
+    transition: color 1s;
+    color: #242fcc;
+}
+
 
 footer .footer-box .left-content p{
     font-family: 'Poppins';
-    font-weight: bold;
+    font-weight: 400;
     font-size: 14px;
-    color: #535353;
+    color: #ffffff;
     position: relative;
     top: 15px;
     left: 20px;
     padding-bottom: 10px;
 }
 
-footer .footer-box .right-content p{
-    font-family: 'Poppins';
-    font-weight: bold;
-    font-size: 14px;
-    color: #535353;
+.right-content a{
     position: relative;
-    display: flex;
-    justify-content: right;
-    padding-bottom: 10px;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    margin: 0 30px 0 0;
+    left: 88%;
     top: -35px;
-    right: 20px;
+    font-size: 20px;
 }
 
-footer .right-content a{
+.right-content p {
+    color: #ffffff;
     position: relative;
-    color: #535353;
-}
-
-footer .right-content i{
-    display: inline-block;
-    position: relative;
-    padding-left: 40px;
-    left: 83%;
-    top: -35px;
+    left: 84%;
+    top: -40px;
 }
 
 footer .end-footer p{
     font-family: 'Poppins';
     font-weight: bold;
     font-size: 14px;
-    color: #535353;
+    color: #ffffff;
     position: relative;
     display: flex;
     justify-content: center;
@@ -229,16 +260,16 @@ footer .end-footer p{
 }
 .container {
     position: absolute;
-    top: 45%;
+    top: 38%;
     left: 10%;
-    max-width: 400px;
-    min-width: 400px;
-    max-height: 200px;
-    min-height: 200px;
+    max-width: 300px;
+    min-width: 300px;
+    max-height: 500px;
+    min-height: 500px;
     margin: 0 auto;
     padding: 30px;
     border-radius: 10px;
-    box-shadow: 5px 5px 15px rgba(0,0,0,0.3);
+    box-shadow: 5px 5px 15px rgba(81, 90, 204, 0.3);
     animation: fadeLeft 1s ease-in-out;
 }
 
@@ -250,23 +281,25 @@ footer .end-footer p{
 
 .container h2{
     margin-bottom: 10px;
+    font-size: 20px;
 }
 .container p {
     line-height: 1.4;
+    font-size: 18px;
 }
 
 .container2 {
     position: absolute;
-    top: 45%;
+    top: 38%;
     right: 10%;
-    max-width: 400px;
-    min-width: 400px;
-    max-height: 200px;
-    min-height: 200px;
+    max-width: 300px;
+    min-width: 300px;
+    max-height: 500px;
+    min-height: 500px;
     margin: 0 auto;
     padding: 30px;
     border-radius: 10px;
-    box-shadow: 5px 5px 15px rgba(0,0,0,0.3);
+    box-shadow: 5px 5px 15px rgba(81, 90, 204, 0.3);
     animation: fadeRight 1s ease-in-out;
 }
 
@@ -278,31 +311,36 @@ footer .end-footer p{
 
 .container2 h2{
     margin-bottom: 10px;
+    font-size: 20px;
 }
 .container2 p {
     line-height: 1.4;
+    font-size: 18px;
 }
 
 .card{
-    position: relative;
-    max-width: 400px;
-    min-width: 400px;
-    max-height: 400px;
-    min-height: 400px;
-    top: -50px;
+    position: absolute;
+    max-width: 300px;
+    min-width: 300px;
+    max-height: 500px;
+    min-height: 500px;
+    top: 38%;
+    right: 40%;
     margin: 0 auto;
     padding: 30px;
     border-radius: 10px;
-    box-shadow: 5px 5px 15px rgba(0,0,0,0.3);
+    box-shadow: 5px 5px 15px rgba(81, 90, 204, 0.3);
     animation: fadeBottom 1s ease-in-out;
 }
 
 .card h2{
     margin-bottom: 10px;
+    font-size: 20px;
 }
 .card p {
     padding-top: 20px;
     line-height: 1.4;
+    font-size: 18px;
 }
 
 .card::after{
@@ -312,8 +350,8 @@ footer .end-footer p{
 }
 
 .high-card {
-    width: 350px;
-    height: 450px;
+    width: 250px;
+    height: 350px;
     object-fit: contain;
     border-radius: 50%;
     float: left;
@@ -337,8 +375,118 @@ footer .end-footer p{
     transition: transform 0.4s ease-in-out;
 }
 #surl{
-    font-size: 12px;
+    font-size: 18px;
     text-decoration: underline;
     font: italic;
 }
 
+.scrollbar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 15px;
+    height: 0;
+    opacity: 0;
+    background: linear-gradient(to top, #ffffff, #000000);
+
+}
+.clickScrollbar{
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 15px;
+    height: 100%;
+    background: rgba(170, 170, 170, 0.356);
+}
+
+.expl p{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.expl {
+    position: absolute;
+    left: 10%;
+    max-width: 500px;
+    min-width: 500px;
+    max-height: 150px;
+    min-height: 150px;
+    top: 40%;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 15px rgba(0,0,0,0.3);
+}
+
+.expl-l p{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.expl-l {
+    position: absolute;
+    right: 10%;
+    max-width: 500px;
+    min-width: 500px;
+    max-height: 150px;
+    min-height: 150px;
+    top: 40%;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 15px rgba(0,0,0,0.3);
+}
+
+.learn {
+    display: block;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+
+
+@keyframes scrollTxt {
+    0% {
+        transform: translate(0, 0);
+    }
+    100% {
+        transform: translate(-100%, 0);
+    }
+}
+
+@keyframes unScrollTxt {
+    0% {
+        transform: translate(-100%, 0);
+    }
+    100% {
+        transform: translate(0, 0);
+    }
+}
+
+.btn {
+    position: relative;
+    margin: 20px 0 20px 0; /* margin: top - left - bottom - right */
+    left: 45%;
+    width: 220px;
+    height: 50px;
+    border-radius: 10px 1px 10px 1px;
+    border: none;
+    background-color: #575ebe;
+    color: white;
+    cursor: pointer;
+    font-size: 15px;
+}
+
+.btn:hover{
+    background-color: #242fcc;
+    transition: background-color 1s;
+}
+
+#arrow {
+    position: relative;
+    top: 1px;
+    left: 5px;
+}
